--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="../src/components/assets/images/favicon.png" />
     <link rel="stylesheet" href="../public/normalize.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>English Words Training Mode</title>
+    <title>English Words Training</title>
   </head>
   <body>
     <div id="root"></div>
